--- a/styles/PingButton.module.css
+++ b/styles/PingButton.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     text-align: middle;
     align-items: center;
+    
 }
 
 .button {
@@ -10,5 +11,6 @@
     padding: 15px;
     font-size: 16px;
     border: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Space Mono", sans-serif;
+    cursor: pointer;
   }
